--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portable Mini Blender - Pay on Delivery</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="ds-logo.png">
 </head>
 <body>
     <header class="hero">
@@ -57,3 +58,4 @@
     </footer>
 </body>
 </html>
+
