--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="images">
         <img src="1.jpg" alt="Mini Blender">
-        <img src="download (1).jpg" alt="Mini Blender">
+        <img src="blender.webp" alt="Mini Blender">
         <img src="1 (1).jpg" alt="Mini Blender">
     </section>
 
@@ -58,4 +58,5 @@
     </footer>
 </body>
 </html>
+
 
