Fix HTML structure and update order form link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <option value="Pink">Pink</option>
                 <option value="Black">Black</option>
             </select>
-            <button type="submit"> Place Order </button>
+           <a href="http://wa.me/09031825029"> <button type="submit"> Place Order </button></a>
         </form>
     </section>
 
@@ -58,6 +58,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
